<resources>
    <string name="app_name">Claim</string>
    <string name="action_settings">Settings</string>
    <string name="txtsingin">Sign In</string>
    <string name="txtUsername">User name</string>
    <string name="txtpassword">Password</string>
    <string name="txtpnumber">Policy Number</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtEmail">Email</string>
    <string name="txtAddress">Address</string>
    <string name="txtLicence">Drivers Licence Number</string>
    <string name="txtPhoneNo">Phone Number</string>
    <string name="txtFullNmaes">Full names</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="txtSignIn">Sign In</string>
    <string name="btnSignIn">Sign In</string>
    <string name="txtAccount">Need an account?</string>
    <string name="btnRegister">Register here</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="txt_longitude">txtLongitude</string>
    <string name="text_latitude">txtlatitude</string>
    <string name="txt_getlocation">display_Location</string>
    <string name = "title_activity_location_">Location_Activity</string>
    <string name="title_activity_location_address">LocationAddress</string>


    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="title_activity_location_address_">LocationAddress_Activity</string>
    <string name="title_activity_get_users_location">GetUsersLocation</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_log_in_activity">Log_in_activity</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_tab">Tab</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="title_activity_claim">Claim</string>
    <string name="title_activity_about">About</string>


</resources>