<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/background_material_light"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_weight="12"
        android:layout_height="0dp"
        android:text="@string/txtSignUp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#048091"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/txtEmail"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:inputType="textPersonName"
        android:id="@+id/edtEnail"
        android:textSize="12sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/txtpassword"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:inputType="textPassword"
        android:id="@+id/edtPassword"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/txtpnumber"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:inputType="text"
        android:id="@+id/edtpolicyNunber"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/txtFullNmaes"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:inputType="textPersonName"
        android:id="@+id/edtFullnames"
        android:textSize="12sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/txtPhoneNo"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:inputType="numberSigned"
        android:id="@+id/edtPnumber"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/txtLicence"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:inputType="text"
        android:id="@+id/edtLicence"
        android:textSize="12sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/txtAddress"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:inputType="text"
        android:id="@+id/edtAddress"
        android:textSize="12sp"
        />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/btnSignUp"
            android:onClick="SingUpClick"
            android:id="@+id/btnSignUp"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="Cancel"
            android:onClick="SingUpClick"
            android:id="@+id/cancel"
            />
    </TableRow>


</LinearLayout>